@@ -1,35 +1,57 @@
-apply from: 'javacc.gradle'
+plugins {
+    id 'io.spring.convention.spring-module'
+    id 'com.intershop.gradle.javacc'
+}
 
-idea.module.excludeDirs = [
-        file('.gradle'),
-        file('build/javacc'),
-        file('build/classes'),
-        file('build/tmp'),
-        file('build/dependency-cache'),
-        file('build/libs')]
+javacc {
+    // configuration container for all javacc configurations
+    configs {
+        template {
+            inputFile = file('src/main/javacc/DnParserImpl.jj')
+        }
+    }
+}
 
 dependencies {
-    compile  "org.springframework:spring-core:$springVersion",
-             "org.springframework:spring-beans:$springVersion",
-             "org.springframework:spring-tx:$springVersion",
-             "org.slf4j:slf4j-api:$slf4jVersion"
+    management platform(project(":spring-ldap-dependencies"))
+    api "org.springframework:spring-core"
+    api "org.springframework:spring-beans"
+    api "org.springframework:spring-tx"
 
-    optional "org.springframework:spring-context:$springVersion",
-            "org.springframework:spring-jdbc:$springVersion",
-            "org.springframework:spring-orm:$springVersion",
-            "com.querydsl:querydsl-core:$queryDslVersion",
-            "com.querydsl:querydsl-apt:$queryDslVersion",
-            "commons-pool:commons-pool:$commonsPoolVersion",
-            "org.apache.commons:commons-pool2:$commonsPool2Version"
+    implementation "org.slf4j:slf4j-api"
 
     provided "com.sun:ldapbp:1.0"
 
-    testCompile "junit:junit:$junitVersion",
-                "commons-lang:commons-lang:$commonsLangVersion",
-                "gsbase:gsbase:$gsbaseVersion",
-                "org.mockito:mockito-core:$mockitoVersion",
-                "org.slf4j:slf4j-log4j12:$slf4jVersion",
-                "org.springframework:spring-test:$springVersion",
-                "org.assertj:assertj-core:$assertjVersion",
-                powerMockDependencies
+    optional "org.springframework:spring-context"
+    optional "org.springframework:spring-jdbc"
+    optional "org.springframework:spring-orm"
+    optional "org.springframework.data:spring-data-commons"
+    optional "com.querydsl:querydsl-core"
+    optional "com.querydsl:querydsl-apt"
+    optional "commons-pool:commons-pool"
+    optional "org.apache.commons:commons-pool2"
+
+    testImplementation platform('org.junit:junit-bom')
+    testImplementation "org.junit.vintage:junit-vintage-engine"
+
+    testImplementation "junit:junit"
+    testImplementation "commons-lang:commons-lang"
+    testImplementation "gsbase:gsbase"
+    testImplementation "org.mockito:mockito-core"
+    testImplementation "org.mockito:mockito-inline"
+    testImplementation "org.springframework:spring-test"
+    testImplementation "org.assertj:assertj-core"
+    testImplementation "com.unboundid:unboundid-ldapsdk"
+}
+
+compileTestJava {
+    doFirst {
+        options.compilerArgs = [
+                '--add-exports', 'java.naming/com.sun.jndi.ldap=ALL-UNNAMED'
+        ]
+    }
+}
+
+test {
+    jvmArgs '--add-exports', 'java.naming/com.sun.jndi.ldap=ALL-UNNAMED'
 }
